# hyperion

./: .gitignore  Cargo.toml  DESIGN-REMAP.md  DESIGN.md  NOTICE.md  README.md  USAGE.md  config.toml
.github/workflows/: ci.yml  release.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/app/src/gui/: autoswitch.rs  bindings.rs  gyro.rs  macros.rs  mod.rs  mouse.rs  panels.rs  profiles.rs  scope.rs  sticks.rs  touchpad.rs  tray.rs  triggers.rs
crates/core/: Cargo.toml
crates/core/src/: autoswitch.rs  axis.rs  config.rs  convert.rs  dt.rs  lib.rs  mouse_accum.rs  stick.rs  trigger.rs
crates/core/src/input/: control.rs  ds_report.rs  dt_clock.rs  mod.rs  normalize.rs  seq.rs  state.rs
crates/core/src/map/: binding.rs  engine.rs  mod.rs  profile.rs
crates/core/src/output/: kbm.rs  mod.rs  state.rs
crates/core/src/rc/: coeffs.rs  curve.rs  firebird.rs  mod.rs  ultimate.rs
crates/core/src/stick/: mod.rs  pipeline.rs  settings.rs  stages.rs
crates/core/tests/: config_roundtrip.rs  convert.rs  goldens.rs  input_parse.rs  rate_invariance.rs  reduction.rs
crates/engine/: Cargo.toml
crates/engine/src/: clock.rs  config_store.rs  control.rs  error.rs  handoff.rs  hot.rs  lib.rs  runtime.rs  seq.rs  supervisor.rs  telemetry.rs  win_io.rs
crates/hid-input/: Cargo.toml
crates/hid-input/src/: lib.rs
crates/hid-input/src/backends/: dualsense_usb.rs  mod.rs  raw_hid.rs  xinput.rs
crates/hid-input/src/win/: enumerate.rs  hid.rs  mod.rs
crates/kbm-output/: Cargo.toml
crates/kbm-output/src/: lib.rs  macro_player.rs
crates/platform-win/: Cargo.toml
crates/platform-win/src/: foreground.rs  hidhide.rs  lib.rs  priority.rs  sched.rs  timerres.rs  topology.rs
crates/vgamepad-output/: Cargo.toml
crates/vgamepad-output/src/: lib.rs
