[package]
name = "app"
description = "Hyperion application binary: wires the supervisor, spawns the hot thread, and runs the egui + tray event loop."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "hyperion"
path = "src/main.rs"

[dependencies]
engine = { path = "../engine" }

[lints]
workspace = true
