[package]
name = "app"
description = "Hyperion application binary: wires the supervisor, spawns the hot thread, and runs the egui + tray event loop."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "hyperion"
path = "src/main.rs"

[dependencies]
engine = { path = "../engine" }

# Ctrl-C handling is only wired on the Windows headless runtime; the non-Windows build is a
# pure compile check and never touches it, so keep the dep off that target.
[target.'cfg(windows)'.dependencies]
ctrlc = "3"

[lints]
workspace = true
