[package]
name = "engine"
description = "Hyperion engine: hot loop, dt measurement, lock-free config hot-swap, telemetry, and supervisor lifecycle. Pure parts (clock, seq, handoff, config_store) are Linux-testable."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "engine"

[dependencies]
hyperion-core = { path = "../core" }
arc-swap = { workspace = true }
rtrb = { workspace = true }
triple_buffer = { workspace = true }
crossbeam-channel = { workspace = true }

[target.'cfg(windows)'.dependencies]
hid-input = { path = "../hid-input" }
vgamepad-output = { path = "../vgamepad-output" }
platform-win = { path = "../platform-win" }

[lints]
workspace = true
