[package]
name = "hid-input"
description = "Windows-only HID input shell for Hyperion: overlapped ReadFile device sources that hand raw report bytes plus a QPC timestamp to the pure core parsers."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
hyperion-core = { path = "../core" }

[lints]
workspace = true
