[package]
name = "platform-win"
description = "Windows-only platform helpers for Hyperion: HidHide IOCTL/CLI, timer-resolution RAII, MMCSS, core affinity, and process priority class."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
hyperion-core = { path = "../core" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
] }

[lints]
workspace = true
