[package]
name = "vgamepad-output"
description = "Windows-only virtual gamepad output for Hyperion: maps the core OutputFrame to an XUSB report and submits it to a ViGEm Xbox 360 target via one synchronous IOCTL."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
hyperion-core = { path = "../core" }

# Pure-Rust ViGEmBus FFI (Win32 bindings via the `windows` crate; no build.rs / no Windows SDK
# required, so it type-checks under `cargo check --target x86_64-pc-windows-msvc` on Linux).
# `default-features = false` drops the DualShock 4 surface; we only need the Xbox 360 target.
[target.'cfg(windows)'.dependencies.vigem-rust]
version = "0.1.1"
default-features = false
features = ["x360"]

[lints]
workspace = true
