[package]
name = "vgamepad-output"
description = "Windows-only virtual gamepad output for Hyperion: maps the core OutputFrame to an XUSB report and submits it to a ViGEm Xbox 360 target via one synchronous IOCTL."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
hyperion-core = { path = "../core" }

# Pure-Rust ViGEmBus FFI (Win32 bindings via the `windows` crate; no build.rs / no Windows SDK
# required, so it type-checks under `cargo check --target x86_64-pc-windows-msvc` on Linux).
# We need BOTH targets in M5: the Xbox 360 path (unchanged) and the new DualShock 4 path that
# `DynPad`/`VigemDs4Pad` drive when a profile's `OutputKind == Ds4` (blueprint §6.3).
[target.'cfg(windows)'.dependencies.vigem-rust]
version = "0.1.1"
default-features = false
features = ["x360", "ds4"]

[lints]
workspace = true
